syntax = "proto2";
package wastlernet;

message Config {
  optional TimescaleDB timescaledb = 1;
  optional Senec senec = 2;
  optional Solvis solvis = 3;
  optional Hafnertec hafnertec = 4;
  optional Weather weather = 5;
  optional Fritzbox fritzbox = 6;
  optional Hue hue = 7;
}

message Senec {
  // HTTP URL of web interface
  optional string host = 1;
  optional int32 poll_interval = 2;
}

message Solvis {
  // MODBUS host and port
  optional string host = 1;
  optional int32 port = 2;
  optional int32 poll_interval = 3;
}

message Hafnertec {
  // HTTP URL of web interface, HTTP user and password
  optional string host = 1;
  optional string user = 2;
  optional string password = 3;
  optional int32 poll_interval = 4;
}

message Weather {
  // Address and port to listen on (e.g. http://192.168.178.2:41001/)
  optional string listen = 1;
}

message Fritzbox {

}

message Hue {

}

message TimescaleDB {
  optional string host = 1;
  optional int32 port = 2;
  optional string database = 3;
  optional string user = 4;
  optional string password = 5;
}